--- a/version_1.ipynb
+++ b/version_1.ipynb
@@ -13,9 +13,14 @@
    "id": "2afbafb6",
    "metadata": {},
    "source": [
-    "1. Load required libraries\n",
-    "2. load \"News_Category_Dataset_v3\n",
-    "3. Preprocess the dataset"
+    "# Phase 1: Data Preprocessing\n",
+    "\n",
+    "1. Load subset of data\n",
+    "2. Check for missing values\n",
+    "3. Check for duplicates\n",
+    "4. Check and process links\n",
+    "5. Extract articles\n",
+    "6. Created dataframe with unified document"
    ]
   },
   {
@@ -65,6 +70,14 @@
     "\n",
     "#preview\n",
     "print(data[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d594558",
+   "metadata": {},
+   "source": [
+    "## 1. Load subset of data"
    ]
   },
   {
@@ -207,6 +220,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca2a9541",
+   "metadata": {},
+   "source": [
+    "## 2. Check for missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "e844ecb7",
@@ -232,6 +253,14 @@
    "source": [
     "#check for missing values\n",
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8eb414e",
+   "metadata": {},
+   "source": [
+    "## 3. Check for duplicates"
    ]
   },
   {
@@ -348,41 +377,7 @@
    "id": "c50e0bcb",
    "metadata": {},
    "source": [
-    "### Extract full artcile from links\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5e986734",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test regular expression for identifying more than one url in each row\n",
-    "#url = 'https://www.huffingtonpost.comhttp://www.motherjones.com/politics/2016/05/trump-butler-anthony-senecal-facebook-kill-obama'\n",
-    "\n",
-    "#url_pattern = r'(https?://[^\\s\"<>]*?)(?=(?:https?://|$))'\n",
-    "#found_urls = re.findall(url_pattern, url)\n",
-    "#found_urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b3dc028a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Check how many rows have more than one link concatenated together \n",
-    "#urls = df['link'].loc[:].tolist()\n",
-    "#url_pattern = r'(https?://[^\\s\"<>]*?)(?=(?:https?://|$))'\n",
-    "#i=0\n",
-    "#if urls:\n",
-    "    #for url in urls:\n",
-    "        #if len(re.findall(url_pattern, url)) >1:\n",
-    "            #i+=1\n",
-    "#i\n"
+    "## 4. Check and process url links"
    ]
   },
   {
@@ -487,6 +482,14 @@
    ],
    "source": [
     "count_url(df['article_url'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5892707",
+   "metadata": {},
+   "source": [
+    "## 5. Extract articles"
    ]
   },
   {
@@ -37645,6 +37648,14 @@
     "\n",
     "#check for missing values\n",
     "news_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be824692",
+   "metadata": {},
+   "source": [
+    "## 6. Created dataframe with unified document"
    ]
   },
   {
