--- a/version_2.ipynb
+++ b/version_2.ipynb
@@ -14,13 +14,12 @@
    "metadata": {},
    "source": [
     "1. Split data in chunks\n",
-    "2. Create embeddings; Huggin Face sentence-transformers/all-MiniLM-L6-v2\n",
-    "3. Create Faiss index; Langchain Faiss (Semanntic search)\n",
-    "4. Implement TF-IDF and cosine similairty (keyword search)\n",
-    "5. Create Hybrid-search (semantic + keyword)\n",
-    "6. Create Agent for summary generation \n",
-    "7. Create Agent for linkedin post generation\n",
-    "8. Create request logic; manages all the agents"
+    "2. Create embeddings and Faiss index; (Semanntic search)\n",
+    "3. Implement TF-IDF and cosine similairty (keyword search)\n",
+    "4. Create Hybrid-search (semantic + keyword)\n",
+    "5. Create Agent for summary generation \n",
+    "6. Create Agent for linkedin post generation\n",
+    "7. Create request logic; manages all the agents"
    ]
   },
   {
@@ -276,7 +275,7 @@
    "id": "17193127",
    "metadata": {},
    "source": [
-    "## 2. Create embeddings; Huggin Face sentence-transformers/all-MiniLM-L6-v2"
+    "## 2. Create embeddings and Faiss index (Semanntic search)"
    ]
   },
   {
@@ -370,7 +369,7 @@
    "id": "d40f3063",
    "metadata": {},
    "source": [
-    "## 4. Implement TF-IDF and cosine similairty (keyword search)"
+    "## 3. Implement TF-IDF and cosine similairty (keyword search)"
    ]
   },
   {
@@ -513,7 +512,7 @@
    "id": "038f773d",
    "metadata": {},
    "source": [
-    "## 5. Create Hybrid-search (semantic + keyword)"
+    "## 4. Create Hybrid-search (semantic + keyword)"
    ]
   },
   {
@@ -684,7 +683,7 @@
    "id": "366c99cc",
    "metadata": {},
    "source": [
-    "## 6. Create Agent for summary generation \n",
+    "## 5. Create Agent for summary generation \n",
     "\n",
     "*Workflow*\n",
     "\n",
@@ -879,7 +878,7 @@
    "id": "975ca695",
    "metadata": {},
    "source": [
-    "## 7. Create Agent for linkedin post generation\n",
+    "## 6. Create Agent for linkedin post generation\n",
     "\n",
     "*Workflow*\n",
     "\n",
@@ -993,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "2e62563c",
    "metadata": {},
    "outputs": [
@@ -1039,6 +1038,8 @@
     }
    ],
    "source": [
+    "#Test functionality of Agent for Linkedin post generation\n",
+    "\n",
     "# Get documents from hybrid search\n",
     "search_results = model_search(\n",
     "    embedding_model=embedding_model,\n",
@@ -1062,7 +1063,7 @@
    "id": "1b8755bd",
    "metadata": {},
    "source": [
-    "## 8. Create request logic; manages all the agents"
+    "## 7. Create request logic; manages all the agents"
    ]
   },
   {
@@ -1152,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9b75f678",
    "metadata": {},
    "outputs": [
@@ -1204,6 +1205,8 @@
     }
    ],
    "source": [
+    "#Test functionality of request routing logic \n",
+    "\n",
     "query = \"Create a post about Biden vaccine mandate for workers\"\n",
     "results=route_request(embedding_model=embedding_model,\n",
     "                      faiss_db=faiss_index,\n",
